--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -4,8 +4,14 @@ import "../main.css";
 import interior1 from "../assets/img/cleaning/img6.jpg";
 import interior2 from "../assets/img/cleaning/img5.jpg";
 import BaseLayout from "../layouts/BaseLayout.astro";
+
+const seoData = {
+	title: "О компании Нортекс | 20+ лет на рынке декоративных тканей",
+	description: "Компания Нортекс в индустрии более 20 лет. Опыт работы с производствами, дизайнерами, архитектурными бюро. Широкий выбор качественных тканей для любых проектов.",
+	keywords: "о компании Нортекс, история компании, опыт работы, поставщик тканей Москва, 20 лет опыта, дизайнерские ткани"
+};
 ---
-<BaseLayout>
+<BaseLayout {...seoData}>
   <div class="about-page">
     
     
